<resources>
    <string name="app_name">Student Attendance</string>
    <string name="aa_class_name">ANDROID APPS</string>
    <string name="aa_class_id">COMP SCI 4022</string>
    <string name="aa_class_instructor">DAVID VAUGHN</string>
    <string name="aa_class_number">5</string>
    <string name="aa_class_days">TUESDAY / THURSDAY</string>
    <string name="itts_class_name">INTRODUCTION TO THE SOFTWARE PROFESSION</string>
    <string name="itts_class_id">COMP SCI 4500</string>
    <string name="itts_class_instructor">KEITH MILLER</string>
    <string name="itts_class_number">5</string>
    <string name="online_class_days">ONLINE</string>
    <string name="ss_class_name">SOFTWARE SECURITY</string>
    <string name="ss_class_id">INFO SYS 3868</string>
    <string name="ss_class_instructor">ANSHUMAN SINGH</string>
    <string name="ss_class_number">5</string>
    <string name="student_name1">John Jacob</string>
    <string name="student_name2">Jinklheimer Smith</string>
    <string name="student_name3">Carol Danvers</string>
    <string name="student_name4">Jean Grey</string>
    <string name="student_name5">Zoe Saldana</string>
    <string name="student_name6">Natasha Romanov</string>
    <string name="student_name7">Lei Ling</string>
    <string name="student_name8">Bruce Banner</string>
    <string name="student_name9">Tony Stark</string>
    <string name="student_name10">Clare Moore</string>
    <string name="student_name11">Jessica Jones</string>
    <string name="student_name12">Abigail Brand</string>



</resources>
