<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/sl_layout">

    <TextView
        android:id="@+id/sname1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name1"
        android:textSize="35sp"

        />

    <TextView
        android:id="@+id/sname2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name2"
        android:textSize="35sp"
        />

    <TextView
        android:id="@+id/sname3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name3"
        android:textSize="35sp"
        />

    <TextView
        android:id="@+id/sname4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name4"
        android:textSize="35sp"
        />

    <TextView
        android:id="@+id/sname5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name5"
        android:textSize="35sp"
        />

</LinearLayout>