<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CLASS DETAILS"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="25dp" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="COURSE NUMBER:"
        android:textSize="25dp"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/class_id"
        />


    <TextView
        android:id="@+id/class_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aa_class_id"
        android:textSize="35dp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="INSTRUCTOR:"
        android:textSize="25dp"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/class_instructor" />


    <TextView
        android:id="@+id/class_instructor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aa_class_instructor"
        android:textSize="35dp"
         />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NUMBER OF STUDENTS:"
        android:textSize="25dp"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/class_number"/>

    <TextView
        android:id="@id/class_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aa_class_number"
        android:textSize="35dp"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DAYS HELD:"
        android:textSize="25dp"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/class_days"
         />

    <TextView
        android:id="@+id/class_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aa_class_days"
        android:textSize="35dp"
        />
    <Button
        android:id="@+id/student_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="STUDENT LIST"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        />
</LinearLayout>